# SudokuSolver

./: README.md
SudokuSolver/: CMakeLists.txt
SudokuSolver/src/: main.cpp
SudokuSolver/src/app/: imageprocessing.cpp  imageprocessing.h  ocr.cpp  ocr.h  solver.cpp  solver.h
SudokuSolver/src/ui/: widget.cpp  widget.h  widget.ui
build-SudokuSolver-Desktop-Debug/: CMakeCache.txt  Makefile  SudokuSolver.cbp  cmake_install.cmake
build-SudokuSolver-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-84177c0485200b36b1c4.json  cmakeFiles-v1-fcf05dd8ff61254f419a.json  codemodel-v2-07366db7f10c9b892074.json  codemodel-v2-d2f57e855d77b387fb6e.json  index-2021-12-04T09-57-22-0075.json  index-2021-12-05T10-37-04-0747.json  target-SudokuSolver-Debug-a7bf19e9b7ff790ebc9a.json  target-SudokuSolver-Debug-e4f565e557251a5e294d.json  target-SudokuSolver_autogen-Debug-1944c6254d58ebd72a2c.json
build-SudokuSolver-Desktop-Debug/SudokuSolver_autogen/: moc_predefs.h
build-SudokuSolver-Desktop-Debug/SudokuSolver_autogen/6JUD6UOVAQ/: moc_qcustomplot.cpp
build-SudokuSolver-Desktop-Debug/SudokuSolver_autogen/YPKJ5OE7LN/: moc_widget.cpp
build-SudokuSolver-Desktop-Debug/SudokuSolver_autogen/include/: ui_widget.h
